k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulplabs-learn
  labels:
    app.kubernetes.io/part-of: pulplabs-learn
